Fix typos [ci skip]

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -158,7 +158,7 @@
 %   \begin{syntax}
 %     |l3kernel.filemdfivesum(|\meta{file}|)|
 %   \end{syntax}
-%   Returns the of the MD5 sum of the file contents read as bytes; note that
+%   Returns the MD5 sum of the file contents read as bytes; note that
 %   the result will depend on the nature of the line endings used in the file,
 %   in contrast to normal \TeX{} behaviour. If the \meta{file} is not found,
 %   nothing is returned with \emph{no error raised}.
@@ -168,7 +168,7 @@
 %   \begin{syntax}
 %     |l3kernel.filemoddate(|\meta{file}|)|
 %   \end{syntax}
-%   Returns the of the date/time of last modification of the \meta{file} in the
+%   Returns the date/time of last modification of the \meta{file} in the
 %   format
 %   \begin{quote}
 %     |D:|\meta{year}\meta{month}\meta{day}\meta{hour}\meta{minute}^^A
