Drop unused scan mark

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1053,12 +1053,11 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\s_@@_mark,\s_@@_stop,\s_@@_nil}
+% \begin{macro}{\s_@@_mark,\s_@@_stop}
 %   Scan marks used throughout the module.
 %    \begin{macrocode}
 \scan_new:N \s_@@_mark
 \scan_new:N \s_@@_stop
-\scan_new:N \s_@@_nil
 %    \end{macrocode}
 % \end{macro}
 %
