Have to use the correct env, preferrably

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1053,13 +1053,13 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\s_@@_mark,\s_@@_stop}
+% \begin{variable}{\s_@@_mark,\s_@@_stop}
 %   Scan marks used throughout the module.
 %    \begin{macrocode}
 \scan_new:N \s_@@_mark
 \scan_new:N \s_@@_stop
 %    \end{macrocode}
-% \end{macro}
+% \end{variable}
 %
 % \begin{macro}{\@@_use_none_delimit_by_s_stop:w}
 %   Function to gobble until a scan mark.
@@ -1068,13 +1068,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\q_@@_recursion_tail,\q_@@_recursion_stop}
+% \begin{variable}{\q_@@_recursion_tail,\q_@@_recursion_stop}
 %   Quarks for recursion.
 %    \begin{macrocode}
 \quark_new:N \q_@@_recursion_tail
 \quark_new:N \q_@@_recursion_stop
 %    \end{macrocode}
-% \end{macro}
+% \end{variable}
 %
 % \begin{macro}{\@@_if_recursion_tail_stop_do:Nn,\@@_if_recursion_tail_stop:N}
 %   Functions to query quarks.
