There were some quarks in l3basics as well

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1846,6 +1846,14 @@
 %   two arguments are absorbed then the code would work.
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_use_none_delimit_by_q_recursion_stop:w}
+%   Private version of \cs{use_none_delimit_by_q_recursion_stop:w}.
+%    \begin{macrocode}
+\cs_set:Npn \@@_use_none_delimit_by_q_recursion_stop:w
+  #1 \q_@@_recursion_stop { }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}
 %   {
 %     \prg_set_conditional:Npnn           ,
@@ -1981,17 +1989,17 @@
         \exp_not:N \@@_generate_conditional:NNnnnnNw
         \exp_not:n { #4 #5 {#1} {#2} {#6} }
         \@@_generate_conditional_test:w
-          #8 \q_mark
+          #8 \s_@@_mark
             \@@_generate_conditional_fast:nw
-          \prg_return_true: \else: \prg_return_false: \fi: \q_mark
+          \prg_return_true: \else: \prg_return_false: \fi: \s_@@_mark
             \use_none:n
         \exp_not:n { {#8} \use_i_ii:nnn }
         \tl_to_str:n {#7}
-        \exp_not:n { , \q_recursion_tail , \q_recursion_stop }
+        \exp_not:n { , \q_@@_recursion_tail , \q_@@_recursion_stop }
       }
   }
 \cs_set:Npn \@@_generate_conditional_test:w
-    #1 \prg_return_true: \else: \prg_return_false: \fi: \q_mark #2
+    #1 \prg_return_true: \else: \prg_return_false: \fi: \s_@@_mark #2
   { #2 {#1} }
 \cs_set:Npn \@@_generate_conditional_fast:nw #1#2 \exp_not:n #3
   { \exp_not:n { {#1} \use_i:nn } }
@@ -2006,8 +2014,8 @@
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_generate_conditional:NNnnnnNw #1#2#3#4#5#6#7#8 ,
   {
-    \if_meaning:w \q_recursion_tail #8
-      \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
+    \if_meaning:w \q_@@_recursion_tail #8
+      \exp_after:wN \@@_use_none_delimit_by_q_recursion_stop:w
     \fi:
     \use:c { @@_generate_ #8 _form:wNNnnnnN }
         \tl_if_empty:nF {#8}
@@ -2017,7 +2025,7 @@
               {#8} { \token_to_str:c { #3 : #4 } }
           }
         \use_none:nnnnnnnn
-      \q_stop
+      \s_@@_stop
       #1 #2 {#3} {#4} {#5} {#6} #7
     \@@_generate_conditional:NNnnnnNw #1 #2 {#3} {#4} {#5} {#6} #7
   }
@@ -2052,7 +2060,7 @@
 %   nesting of conditionals.
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_generate_p_form:wNNnnnnN
-    #1 \q_stop #2#3#4#5#6#7#8
+    #1 \s_@@_stop #2#3#4#5#6#7#8
   {
     \if_meaning:w e #3
       \exp_after:wN \use_i:nn
@@ -2071,7 +2079,7 @@
       }
   }
 \cs_set_protected:Npn \@@_generate_T_form:wNNnnnnN
-    #1 \q_stop #2#3#4#5#6#7#8
+    #1 \s_@@_stop #2#3#4#5#6#7#8
   {
     #8
       { \exp_args:Nc #2 { #4 : #5 T } #6 }
@@ -2079,7 +2087,7 @@
       { #7 \exp_after:wN \use_ii:nn \fi: \use_none:n }
   }
 \cs_set_protected:Npn \@@_generate_F_form:wNNnnnnN
-    #1 \q_stop #2#3#4#5#6#7#8
+    #1 \s_@@_stop #2#3#4#5#6#7#8
   {
     #8
       { \exp_args:Nc #2 { #4 : #5 F } #6 }
@@ -2087,7 +2095,7 @@
       { #7 \exp_after:wN \use_none:nn \fi: \use:n }
   }
 \cs_set_protected:Npn \@@_generate_TF_form:wNNnnnnN
-    #1 \q_stop #2#3#4#5#6#7#8
+    #1 \s_@@_stop #2#3#4#5#6#7#8
   {
     #8
       { \exp_args:Nc #2 { #4 : #5 TF } #6 }
@@ -2121,7 +2129,7 @@
           \cs_split_function:N #3
           \exp_not:N #1
           \tl_to_str:n {#4}
-          \exp_not:n { , \q_recursion_tail , \q_recursion_stop }
+          \exp_not:n { , \q_@@_recursion_tail , \q_@@_recursion_stop }
       }
   }
 %    \end{macrocode}
@@ -2156,19 +2164,19 @@
     \if_meaning:w \c_false_bool #3
       \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:c {#1} }
-      \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
+      \exp_after:wN \@@_use_none_delimit_by_q_recursion_stop:w
     \fi:
     \if_meaning:w \c_false_bool #6
       \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:c {#4} }
-      \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
+      \exp_after:wN \@@_use_none_delimit_by_q_recursion_stop:w
     \fi:
     \@@_set_eq_conditional_loop:nnnnNw {#1} {#2} {#4} {#5}
   }
 \cs_set_protected:Npn \@@_set_eq_conditional_loop:nnnnNw #1#2#3#4#5#6 ,
   {
-    \if_meaning:w \q_recursion_tail #6
-      \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
+    \if_meaning:w \q_@@_recursion_tail #6
+      \exp_after:wN \@@_use_none_delimit_by_q_recursion_stop:w
     \fi:
     \use:c { @@_set_eq_conditional_ #6 _form:wNnnnn }
         \tl_if_empty:nF {#6}
@@ -2178,17 +2186,17 @@
               {#6} { \token_to_str:c { #1 : #2 } }
           }
         \use_none:nnnnnn
-      \q_stop
+      \s_@@_stop
       #5 {#1} {#2} {#3} {#4}
     \@@_set_eq_conditional_loop:nnnnNw {#1} {#2} {#3} {#4} #5
   }
-\cs_set:Npn \@@_set_eq_conditional_p_form:wNnnnn #1 \q_stop #2#3#4#5#6
+\cs_set:Npn \@@_set_eq_conditional_p_form:wNnnnn #1 \s_@@_stop #2#3#4#5#6
   { #2 { #3 _p : #4    }    { #5 _p : #6    } }
-\cs_set:Npn \@@_set_eq_conditional_TF_form:wNnnnn #1 \q_stop #2#3#4#5#6
+\cs_set:Npn \@@_set_eq_conditional_TF_form:wNnnnn #1 \s_@@_stop #2#3#4#5#6
   { #2 { #3    : #4 TF }    { #5    : #6 TF } }
-\cs_set:Npn \@@_set_eq_conditional_T_form:wNnnnn #1 \q_stop #2#3#4#5#6
+\cs_set:Npn \@@_set_eq_conditional_T_form:wNnnnn #1 \s_@@_stop #2#3#4#5#6
   { #2 { #3    : #4 T  }    { #5    : #6 T  } }
-\cs_set:Npn \@@_set_eq_conditional_F_form:wNnnnn #1 \q_stop #2#3#4#5#6
+\cs_set:Npn \@@_set_eq_conditional_F_form:wNnnnn #1 \s_@@_stop #2#3#4#5#6
   { #2 { #3    : #4  F }    { #5    : #6  F } }
 %    \end{macrocode}
 % \end{macro}
@@ -2349,13 +2357,13 @@
       {
         \exp_after:wN \exp_after:wN \exp_after:wN
         \@@_split_function_auxi:w
-          \cs_to_str:N ##1 \q_mark \c_true_bool
-          #1 \q_mark \c_false_bool \q_stop
+          \cs_to_str:N ##1 \s_@@_mark \c_true_bool
+          #1 \s_@@_mark \c_false_bool \s_@@_stop
       }
     \cs_set:Npn \@@_split_function_auxi:w
-        ##1 #1 ##2 \q_mark ##3##4 \q_stop
-      { \@@_split_function_auxii:w ##1 \q_mark \q_stop {##2} ##3 }
-    \cs_set:Npn \@@_split_function_auxii:w ##1 \q_mark ##2 \q_stop
+        ##1 #1 ##2 \s_@@_mark ##3##4 \s_@@_stop
+      { \@@_split_function_auxii:w ##1 \s_@@_mark \s_@@_stop {##2} ##3 }
+    \cs_set:Npn \@@_split_function_auxii:w ##1 \s_@@_mark ##2 \s_@@_stop
       { {##1} }
   }
 \exp_after:wN \@@_tmp:w \token_to_str:N :
@@ -3158,7 +3166,7 @@
 \use:x
   {
     \exp_not:n { \cs_new:Npn \@@_prefix_arg_replacement:wN #1 }
-    \tl_to_str:n { macro : } \exp_not:n { #2 -> #3 \q_stop #4 }
+    \tl_to_str:n { macro : } \exp_not:n { #2 -> #3 \s_@@_stop #4 }
   }
   { #4 {#1} {#2} {#3} }
 \cs_new:Npn \cs_prefix_spec:N #1
@@ -3166,7 +3174,7 @@
     \token_if_macro:NTF #1
       {
         \exp_after:wN \@@_prefix_arg_replacement:wN
-          \token_to_meaning:N #1 \q_stop \use_i:nnn
+          \token_to_meaning:N #1 \s_@@_stop \use_i:nnn
       }
       { \scan_stop: }
   }
@@ -3175,7 +3183,7 @@
     \token_if_macro:NTF #1
       {
         \exp_after:wN \@@_prefix_arg_replacement:wN
-          \token_to_meaning:N #1 \q_stop \use_ii:nnn
+          \token_to_meaning:N #1 \s_@@_stop \use_ii:nnn
       }
       { \scan_stop: }
   }
@@ -3184,7 +3192,7 @@
     \token_if_macro:NTF #1
       {
         \exp_after:wN \@@_prefix_arg_replacement:wN
-          \token_to_meaning:N #1 \q_stop \use_iii:nnn
+          \token_to_meaning:N #1 \s_@@_stop \use_iii:nnn
       }
       { \scan_stop: }
   }
