Better markup and missing \end{macro}

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1693,7 +1693,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[EXP]
 %   {
 %     \use_i_delimit_by_q_nil:nw  ,
 %     \use_i_delimit_by_q_stop:nw ,
