--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -793,7 +793,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{
+% \begin{macro}[EXP]{
 %     \@@_use_none_delimit_by_s_stop:w,
 %     \@@_use_i_delimit_by_s_stop:nw
 %   }
@@ -802,17 +802,17 @@
 \cs_new:Npn \@@_use_none_delimit_by_s_stop:w #1 \s_@@_stop { }
 \cs_new:Npn \@@_use_i_delimit_by_s_stop:nw #1 #2 \s_@@_stop {#1}
 %    \end{macrocode}
-% \end{variable}
+% \end{macro}
 %
 % \begin{variable}{\q_@@_recursion_tail,\q_@@_recursion_stop}
-%   Internal scan marks.
+%   Internal recursion quarks.
 %    \begin{macrocode}
 \quark_new:N \q_@@_recursion_tail
 \quark_new:N \q_@@_recursion_stop
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\@@_if_recursion_tail_break:nN,\@@_if_recursion_tail_stop:n}
+% \begin{macro}[EXP]{\@@_if_recursion_tail_break:nN,\@@_if_recursion_tail_stop:n}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
 \__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_break:nN
@@ -820,7 +820,7 @@
 \__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop:n
   \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
 %    \end{macrocode}
-% \end{variable}
+% \end{macro}
 %
 % \begin{macro}{\@@_tmp:w}
 %   A temporary function for various purposes.
