--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -178,6 +178,12 @@
 %       retains two separate letters, thus this transformation \emph{is}
 %       available using \pdfTeX{}.
 %   \end{itemize}
+%
+%  For titlecasing, note that there are two functions available. The
+%  function \cs{text_titlecase:n} applies (broadly) uppercasing to the first
+%  letter of the input, then lowercasing to the remainder. In contrast,
+%  \cs{text_titlecase_first:n} \emph{only} carries out the uppercasing operation,
+%  and leaves the balance of the input unchanged.
 % \end{function}
 %
 % \subsection{Removing formatting from text}
