--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -183,7 +183,16 @@
 %  function \cs{text_titlecase:n} applies (broadly) uppercasing to the first
 %  letter of the input, then lowercasing to the remainder. In contrast,
 %  \cs{text_titlecase_first:n} \emph{only} carries out the uppercasing operation,
-%  and leaves the balance of the input unchanged.
+%  and leaves the balance of the input unchanged. Determining whether
+%  non-letter characters at the start of text should switch from upper- to
+%  lowercasing is controllable. When \cs{l_text_titlecase_check_letter_bool} is
+%  \texttt{true}, characters which are not letters (category code~$11$) are
+%  left unchanged and \enquote{skipped}: the first \emph{letter} is uppercased.
+%  (With $8$-bit engines, this is extended to active characters which form
+%  part of a multi-byte letter codepoint.) When
+%  \cs{l_text_titlecase_check_letter_bool} is \texttt{false}, the first
+%  character is uppercased, and the rest lowercased, irrespective of the nature
+%  of the character.
 % \end{function}
 %
 % \subsection{Removing formatting from text}
@@ -249,7 +258,9 @@
 % \end{variable}
 %
 % \begin{variable}{\l_text_titlecase_check_letter_bool}
-%   
+%   Controls how the start of titlecasing is handled: when \texttt{true}, the
+%   first \emph{letter} in text is considered. The standard setting is
+%   \texttt{true}.
 % \end{variable}
 %
 % \end{documentation}
