--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -666,10 +666,24 @@
 %
 % \begin{macro}{\@@_backend_compresslevel:n}
 % \begin{macro}{\@@_backend_compress_objects:n}
-%   These are all no-ops.
+%   These are all no-ops, but can give helpful advice. We make sure we
+%   only give that the once.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_compresslevel:n #1 { }
-\cs_new_protected:Npn \@@_backend_compress_objects:n #1 { }
+\cs_new_protected:Npn \@@_backend_compresslevel:n #1
+  {
+    \__kernel_msg_info:nn { backend } { cannot-set-compression }
+    \cs_gset_protected:Npn \@@_backend_compresslevel:n ##1 { }
+    \cs_gset_protected:Npn \@@_backend_compress_objects:n ##1 { }
+  }
+\cs_new_eq:NN \@@_backend_compress_objects:n
+  \@@_backend_compresslevel:n
+\__kernel_msg_new:nnn { backend } { cannot-set-compression }
+  {
+    LaTeX~cannot~set~PDF~compression~in~DVI~mode.\\ \\
+    If~you~are~using~"ps2pdf",~add \\ \\
+    \iow_indent:n { -dCompressStreams=false~-dCompressPages=false } \\ \\
+    to~your~command~line~call.
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
