--- a/l3experimental/l3pdf/l3pdf-code.tex
+++ b/l3experimental/l3pdf/l3pdf-code.tex
@@ -2,7 +2,7 @@
 
 File: l3pdf-code.tex
 
-Copyright (C) 2019 The LaTeX3 Project
+Copyright (C) 2019,2020 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -38,7 +38,7 @@ for those people who are interested.
 \ExplSyntaxOn
 \clist_gput_right:Nn \g_docinput_clist
   {
-    l3pdf.dtx ,
+    l3pdf-addn.dtx ,
   }
 \ExplSyntaxOff
 
