Replace quarks by scan marks in l3str

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -797,7 +797,7 @@
 %     \@@_use_none_delimit_by_s_stop:w,
 %     \@@_use_i_delimit_by_s_stop:nw
 %   }
-%   Internal scan marks.
+%   Functions to gobble up to a scan mark.
 %    \begin{macrocode}
 \cs_new:Npn \@@_use_none_delimit_by_s_stop:w #1 \s_@@_stop { }
 \cs_new:Npn \@@_use_i_delimit_by_s_stop:nw #1 #2 \s_@@_stop {#1}
