Replace quarks by scan marks in l3prg

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -916,6 +916,32 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Internal auxiliaries}
+%
+% \begin{variable}{\q_@@_recursion_tail,\q_@@_recursion_stop}
+%   Internal recursion quarks.
+%    \begin{macrocode}
+\quark_new:N \q_@@_recursion_tail
+\quark_new:N \q_@@_recursion_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:nn}
+%   Functions to query recursion quarks.
+%    \begin{macrocode}
+\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop_do:nn
+  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_use_i_delimit_by_q_recursion_stop:nw}
+%   Functions to gobble up to a quark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_i_delimit_by_q_recursion_stop:nw
+  #1 #2 \q_@@_recursion_stop {#1}
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[pTF]{\bool_if:N, \bool_if:c}
 % \UnitTested
 %  Straight forward here. We could optimize here if we wanted to as
@@ -1213,7 +1239,7 @@
 %   \texttt{false} expression, then the result is \texttt{true}.
 %    \begin{macrocode}
 \cs_new:Npn \bool_lazy_all_p:n #1
-  { \@@_lazy_all:n #1 \q_recursion_tail \q_recursion_stop }
+  { \@@_lazy_all:n #1 \q_@@_recursion_tail \q_@@_recursion_stop }
 \prg_new_conditional:Npnn \bool_lazy_all:n #1 { T , F , TF }
   {
     \if_predicate:w \bool_lazy_all_p:n {#1}
@@ -1224,9 +1250,9 @@
   }
 \cs_new:Npn \@@_lazy_all:n #1
   {
-    \quark_if_recursion_tail_stop_do:nn {#1} { \c_true_bool }
+    \@@_if_recursion_tail_stop_do:nn {#1} { \c_true_bool }
     \bool_if:nF {#1}
-      { \use_i_delimit_by_q_recursion_stop:nw { \c_false_bool } }
+      { \@@_use_i_delimit_by_q_recursion_stop:nw { \c_false_bool } }
     \@@_lazy_all:n
   }
 %    \end{macrocode}
@@ -1260,7 +1286,7 @@
 %   \texttt{true} expression, then the result is \texttt{false}.
 %    \begin{macrocode}
 \cs_new:Npn \bool_lazy_any_p:n #1
-  { \@@_lazy_any:n #1 \q_recursion_tail \q_recursion_stop }
+  { \@@_lazy_any:n #1 \q_@@_recursion_tail \q_@@_recursion_stop }
 \prg_new_conditional:Npnn \bool_lazy_any:n #1 { T , F , TF }
   {
     \if_predicate:w \bool_lazy_any_p:n {#1}
@@ -1271,9 +1297,9 @@
   }
 \cs_new:Npn \@@_lazy_any:n #1
   {
-    \quark_if_recursion_tail_stop_do:nn {#1} { \c_false_bool }
+    \@@_if_recursion_tail_stop_do:nn {#1} { \c_false_bool }
     \bool_if:nT {#1}
-      { \use_i_delimit_by_q_recursion_stop:nw { \c_true_bool } }
+      { \@@_use_i_delimit_by_q_recursion_stop:nw { \c_true_bool } }
     \@@_lazy_any:n
   }
 %    \end{macrocode}
