Replace quarks by scan marks in l3msg

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -525,6 +525,23 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \subsection{Internal auxiliaries}
+%
+% \begin{variable}{\s_@@_mark,\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_mark
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_use_none_delimit_by_s_stop:w}
+%   Functions to gobble up to a scan mark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_none_delimit_by_s_stop:w #1 \s_@@_stop { }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Creating messages}
 %
 % Messages are created and used separately, so there two parts to
@@ -1207,15 +1224,15 @@
     {
       \tl_if_in:nnTF { ^^J #1 } { ^^J > ~ }
         {
-          \tl_if_in:nnTF { #1 \q_mark } { . \q_mark }
+          \tl_if_in:nnTF { #1 \s_@@_mark } { . \s_@@_mark }
             { \@@_show_dot:w } { \@@_show:w }
-          ^^J #1 \q_stop
+          ^^J #1 \s_@@_stop
         }
         { \@@_show:nn { ? #1 } { } }
     }
-  \cs_new:Npn \@@_show_dot:w #1 ^^J > ~ #2 . \q_stop
+  \cs_new:Npn \@@_show_dot:w #1 ^^J > ~ #2 . \s_@@_stop
     { \@@_show:nn {#1} {#2} }
-  \cs_new:Npn \@@_show:w #1 ^^J > ~ #2 \q_stop
+  \cs_new:Npn \@@_show:w #1 ^^J > ~ #2 \s_@@_stop
     { \@@_show:nn {#1} {#2} }
   \cs_new_protected:Npn \@@_show:nn #1#2
     {
@@ -1338,16 +1355,16 @@
       {
         \seq_clear:N \l_@@_hierarchy_seq
         \@@_use_hierarchy:nwwN { }
-          #1 \q_mark \@@_use_hierarchy:nwwN
-          /  \q_mark \use_none_delimit_by_q_stop:w
-          \q_stop
+          #1 \s_@@_mark \@@_use_hierarchy:nwwN
+          /  \s_@@_mark \@@_use_none_delimit_by_s_stop:w
+          \s_@@_stop
         \@@_use_redirect_module:n { }
       }
   }
-\cs_new_protected:Npn \@@_use_hierarchy:nwwN #1#2 / #3 \q_mark #4
+\cs_new_protected:Npn \@@_use_hierarchy:nwwN #1#2 / #3 \s_@@_mark #4
   {
     \seq_put_left:Nn \l_@@_hierarchy_seq {#1}
-    #4 { #1 / #2 } #3 \q_mark #4
+    #4 { #1 / #2 } #3 \s_@@_mark #4
   }
 %    \end{macrocode}
 %   At this point, the items of \cs{l_@@_hierarchy_seq} are the
