Replace quarks by scan marks in l3skip

--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -1380,7 +1380,7 @@
           \__kernel_chk_expr:nNnN
             {##1} \tex_glueexpr:D { } \skip_if_finite:n
         ; \prg_return_false:
-        #1 ; \prg_return_true: \q_stop
+        #1 ; \prg_return_true: \s_@@_stop
       }
   }
 \exp_args:No \@@_tmp:w { \tl_to_str:n { fil } }
