--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1087,6 +1087,23 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Internal auxiliaries}
+%
+% \begin{variable}{\s_@@_mark,\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_mark
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_use_none_delimit_by_s_stop:w}
+%   Functions to gobble up to a scan mark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_none_delimit_by_s_stop:w #1 \s_@@_stop { }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Creating and initialising \texttt{dim} variables}
 %
 % \begin{macro}{\dim_new:N, \dim_new:c}
@@ -1337,7 +1354,7 @@
 \cs_new:Npn \@@_compare:w #1 \@@_compare_error:
   {
     \exp_after:wN \if_false: \exp:w \exp_end_continue_f:w
-      \@@_compare:wNN #1 ? { = \@@_compare_end:w \else: } \q_stop
+      \@@_compare:wNN #1 ? { = \@@_compare_end:w \else: } \s_@@_stop
   }
 \exp_args:Nno \use:nn
   { \cs_new:Npn \@@_compare:wNN #1 } { \tl_to_str:n {pt} #2#3 }
@@ -1347,7 +1364,7 @@
       \fi:
         #1 pt \exp_stop_f:
       \prg_return_false:
-      \exp_after:wN \use_none_delimit_by_q_stop:w
+      \exp_after:wN \@@_use_none_delimit_by_s_stop:w
     \fi:
     \reverse_if:N \if_dim:w #1 pt #2
       \exp_after:wN \@@_compare:wNN
@@ -1361,7 +1378,7 @@
     #1 \reverse_if:N #2 < #3 = { #1 #2 > #3 }
 \cs_new:cpn { @@_compare_ > :w }
     #1 \reverse_if:N #2 > #3 = { #1 #2 < #3 }
-\cs_new:Npn \@@_compare_end:w #1 \prg_return_false: #2 \q_stop
+\cs_new:Npn \@@_compare_end:w #1 \prg_return_false: #2 \s_@@_stop
   { #1 \prg_return_false: \else: \prg_return_true: \fi: }
 \cs_new_protected:Npn \@@_compare_error:
   {
@@ -1403,14 +1420,14 @@
     \exp_args:Nf \@@_case:nnTF { \dim_eval:n {#1} } {#2} { } { }
   }
 \cs_new:Npn \@@_case:nnTF #1#2#3#4
-  { \@@_case:nw {#1} #2 {#1} { } \q_mark {#3} \q_mark {#4} \q_stop }
+  { \@@_case:nw {#1} #2 {#1} { } \s_@@_mark {#3} \s_@@_mark {#4} \s_@@_stop }
 \cs_new:Npn \@@_case:nw #1#2#3
   {
     \dim_compare:nNnTF {#1} = {#2}
       { \@@_case_end:nw {#3} }
       { \@@_case:nw {#1} }
   }
-\cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
+\cs_new:Npn \@@_case_end:nw #1#2#3 \s_@@_mark #4#5 \s_@@_stop
   { \exp_end: #1 #4 }
 %    \end{macrocode}
 % \end{macro}
@@ -1766,6 +1783,13 @@
 %<@@=skip>
 %    \end{macrocode}
 %
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}{\skip_new:N, \skip_new:c}
 %    Allocation of a new internal registers.
 %    \begin{macrocode}
@@ -1914,9 +1938,9 @@
       {
         \exp_after:wN \@@_if_finite:wwNw
         \skip_use:N \tex_glueexpr:D ##1 ; \prg_return_false:
-        #1 ; \prg_return_true: \q_stop
+        #1 ; \prg_return_true: \s_@@_stop
       }
-    \cs_new:Npn \@@_if_finite:wwNw ##1 #1 ##2 ; ##3 ##4 \q_stop {##3}
+    \cs_new:Npn \@@_if_finite:wwNw ##1 #1 ##2 ; ##3 ##4 \s_@@_stop {##3}
   }
 \exp_args:No \@@_tmp:w { \tl_to_str:n { fil } }
 %    \end{macrocode}
