--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -691,7 +691,7 @@
       \fi:
       \exp_after:wN #1
       \exp:w \exp_end_continue_f:w
-      \@@_exp_after_array_f:w #4 \s_@@_stop
+      \@@_exp_after_array_f:w #4 \s_@@_expr_stop
       \exp_after:wN @
       \exp:w
         \@@_parse_operand:Nw \c_@@_prec_colon_int
@@ -702,7 +702,7 @@
       \exp_after:wN \@@_parse_continue:NwN
       \exp_after:wN #1
       \exp:w \exp_end_continue_f:w
-      \@@_exp_after_array_f:w #4 \s_@@_stop
+      \@@_exp_after_array_f:w #4 \s_@@_expr_stop
       \exp_after:wN #5
       \exp_after:wN #1
     \fi:
@@ -712,7 +712,7 @@
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
     \exp:w \exp_end_continue_f:w
-    \@@_exp_after_array_f:w #2 \s_@@_stop
+    \@@_exp_after_array_f:w #2 \s_@@_expr_stop
     #4 #1
   }
 \cs_new:Npn \@@_ternary_auxii:NwwN #1#2@#3@#4
@@ -720,7 +720,7 @@
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
     \exp:w \exp_end_continue_f:w
-    \@@_exp_after_array_f:w #3 \s_@@_stop
+    \@@_exp_after_array_f:w #3 \s_@@_expr_stop
     #4 #1
   }
 %    \end{macrocode}
