--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -245,11 +245,26 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\s_@@_expr_mark, \s_@@_expr_stop}
+% \begin{variable}{\s_@@_expr_mark, \s_@@_expr_stop}
 %   Aliases of \cs{tex_relax:D}, used to terminate expressions.
 %    \begin{macrocode}
 \scan_new:N \s_@@_expr_mark
 \scan_new:N \s_@@_expr_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\s_@@_mark, \s_@@_stop}
+%   Generic scan marks used throughout the module.
+%    \begin{macrocode}
+\scan_new:N \s_@@_mark
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[EXP]{\@@_use_i_delimit_by_s_stop:nw}
+%   Functions to gobble up to a scan mark.
+%    \begin{macrocode}
+\cs_new:Npn \@@_use_i_delimit_by_s_stop:nw #1 #2 \s_@@_stop {#1}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -378,7 +393,7 @@
     \@@_if_type_fp:NTwFw
       #1 \@@_use_ii_until_s:nnw
       \s_@@ { \@@_use_i_until_s:nw 4 }
-      \q_stop
+      \s_@@_stop
   }
 %    \end{macrocode}
 % \end{macro}
@@ -545,7 +560,7 @@
 %   \meta{code}.  The very unusual syntax is for optimization purposes
 %   as that function is used for all floating point operations.
 %    \begin{macrocode}
-\cs_new:Npn \@@_if_type_fp:NTwFw #1 \s_@@ #2 #3 \q_stop {#2}
+\cs_new:Npn \@@_if_type_fp:NTwFw #1 \s_@@ #2 #3 \s_@@_stop {#2}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -562,7 +577,7 @@
     \@@_if_type_fp:NTwFw
       #1 \@@_array_if_all_fp_loop:w
       \s_@@ { \prg_break:n \use_iii:nnn }
-      \q_stop
+      \s_@@_stop
   }
 %    \end{macrocode}
 % \end{macro}
@@ -579,17 +594,17 @@
     \@@_if_type_fp:NTwFw
       #1 { }
       \s_@@ { \@@_type_from_scan_other:N #1 }
-      \q_stop
+      \s_@@_stop
   }
 \cs_new:Npx \@@_type_from_scan_other:N #1
   {
     \exp_not:N \exp_after:wN \exp_not:N \@@_type_from_scan:w
-    \exp_not:N \token_to_str:N #1 \exp_not:N \q_mark
-      \tl_to_str:n { s_@@ _? } \exp_not:N \q_mark \exp_not:N \q_stop
+    \exp_not:N \token_to_str:N #1 \exp_not:N \s_@@_mark
+      \tl_to_str:n { s_@@ _? } \exp_not:N \s_@@_mark \exp_not:N \s_@@_stop
   }
 \exp_last_unbraced:NNNNo
   \cs_new:Npn \@@_type_from_scan:w #1
-    { \tl_to_str:n { s_@@ } } #2 \q_mark #3 \q_stop {#2}
+    { \tl_to_str:n { s_@@ } } #2 \s_@@_mark #3 \s_@@_stop {#2}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -614,7 +629,7 @@
           \cs_end:
           #2 #3
         }
-      \q_stop
+      \s_@@_stop
   }
 \exp_last_unbraced:NNNNo
   \cs_new:Npn \@@_change_func_type_aux:w #1 { \tl_to_str:n { @@ } } { }
@@ -649,7 +664,7 @@
     \@@_if_type_fp:NTwFw
       #2 \@@_exp_after_f:nw
       \s_@@ { \@@_exp_after_any_f:Nnw #2 }
-      \q_stop
+      \s_@@_stop
     {#1} #2
   }
 \cs_new_eq:NN \@@_exp_after_expr_stop_f:nw \use_none:nn
