Replace quarks by scan marks in l3fp-{functions,interchange,symbolic,types}
To match the changes in the main l3fp module

--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -174,12 +174,12 @@
 \cs_new:Npn \@@_if_has_symbolic:nTF #1
   {
     \@@_if_has_symbolic_aux:w
-      #1             \q_mark \use_i:nn
-      \s_@@_symbolic \q_mark \use_ii:nn
-    \q_stop
+      #1             \s_@@_mark \use_i:nn
+      \s_@@_symbolic \s_@@_mark \use_ii:nn
+    \s_@@_stop
   }
 \cs_new:Npn \@@_if_has_symbolic_aux:w
-    #1 \s_@@_symbolic #2 \q_mark #3#4 \q_stop { #3 }
+    #1 \s_@@_symbolic #2 \s_@@_mark #3#4 \s_@@_stop { #3 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -200,7 +200,7 @@
     \exp_after:wN \exp_end: \exp_after:wN
       {
         \exp:w \exp_end_continue_f:w
-        \@@_exp_after_array_f:w #3 \s_@@_stop
+        \@@_exp_after_array_f:w #3 \s_@@_expr_stop
         \exp_after:wN
       }
     \exp_after:wN ;
@@ -522,7 +522,7 @@
     \fp_if_exist:cTF { l_@@_variable_#1_fp }
       {
         \exp_last_unbraced:Nf \@@_exp_after_array_f:w
-          { \use:c { l_@@_variable_#1_fp } } \s_@@_stop
+          { \use:c { l_@@_variable_#1_fp } } \s_@@_expr_stop
         \exp_after:wN \exp_stop_f: #2
       }
       {
