Replace quarks by scan marks in l3color-base

--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -147,6 +147,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}{\@@_select:n, \@@_select:V}
 % \begin{macro}{\@@_select:w}
 % \begin{macro}
@@ -156,17 +163,17 @@
 %    higher-level experimental material.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_select:n #1
-  { \@@_select:w #1 \q_stop }
+  { \@@_select:w #1 \s_@@_stop }
 \cs_generate_variant:Nn \@@_select:n { V }
-\cs_new_protected:Npn \@@_select:w #1 ~ #2 \q_stop
-  { \use:c { @@_select_ #1 :w } #2 \q_stop }
-\cs_new_protected:Npn \@@_select_cmyk:w #1 ~ #2 ~ #3 ~ #4 \q_stop
+\cs_new_protected:Npn \@@_select:w #1 ~ #2 \s_@@_stop
+  { \use:c { @@_select_ #1 :w } #2 \s_@@_stop }
+\cs_new_protected:Npn \@@_select_cmyk:w #1 ~ #2 ~ #3 ~ #4 \s_@@_stop
   { \@@_backend_cmyk:nnnn {#1} {#2} {#3} {#4} }
-\cs_new_protected:Npn \@@_select_gray:w #1 \q_stop
+\cs_new_protected:Npn \@@_select_gray:w #1 \s_@@_stop
   { \@@_backend_gray:n {#1} }
-\cs_new_protected:Npn \@@_select_rgb:w #1 ~ #2 ~ #3 \q_stop
+\cs_new_protected:Npn \@@_select_rgb:w #1 ~ #2 ~ #3 \s_@@_stop
   { \@@_backend_rgb:nnn {#1} {#2} {#3} }
-\cs_new_protected:Npn \@@_select_spot:w #1 ~ #2 \q_stop
+\cs_new_protected:Npn \@@_select_spot:w #1 ~ #2 \s_@@_stop
   { \@@_backend_spot:nn {#1} {#2} }
 %    \end{macrocode}
 % \end{macro}
